syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message EmptyRequest {}

message order {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message CreateOrderRequest {
  float price = 2;
  float tax = 3;
}

message CreateOrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message ListOrderResponse {
  repeated order orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListOrder(EmptyRequest) returns (ListOrderResponse);
}